Enhance Docker deployment setup and project structure
- Updated .gitignore to include database and temporary test files
- Modified database.py to support database path configuration for Docker
- Added .dockerignore to exclude unnecessary files from Docker builds
- Created DEPLOIEMENT_DOCKER.md for detailed Docker deployment instructions
- Added DOCKER_SETUP_SUMMARY.md to summarize Docker-related files
- Implemented Dockerfile for building the application image
- Updated QUICK_START_DOCKER.md for quick setup instructions
- Created README.md with project overview and installation instructions
- Developed deploy-to-nas.ps1 for automated deployment to NAS
- Configured docker-compose.yml for service management and environment variables
- Created test-docker.ps1 for local Docker image testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .env
 
+# Base de données
+*.db
+*.db-journal
+data/
+
 # OS
 .DS_Store
 
@@ -10,3 +15,9 @@
 # Python
 __pycache__/
 .venv
+
+# Fichiers de test temporaires
+check_*.py
+test_*.py
+debug_*.py
+inspect_*.py
