feat: Remove outdated documentation and files related to Docker setup and publication
- Deleted DOCKER_SETUP_SUMMARY.md, GUIDE_PUBLICATION.md, NETTOYAGE_CODE.md, NOUVEAU_DESIGN.md, PUBLICATION_DOCKER_HUB.md, RECAPITULATIF_FINAL.md, check_apocalypse.py, check_db_apocalypse.py, and cinema_cache.db.
- Cleaned up app.py by removing redundant getShowtimes function and added total_showtimes calculation in getShowtimesWeek.
- Updated index.html to include a search bar and sorting options for films, enhancing user interaction.
- Updated todo.md to reflect completed tasks and ongoing features.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ check_*.py
 test_*.py
 debug_*.py
 inspect_*.py
+
+# Documentation de logs obsolètes
+AMELIORATIONS_*.md
+CORRECTION_*.md
+NETTOYAGE_*.md
+NOUVEAU_*.md
+RECAPITULATIF_*.md
+*_SUMMARY.md
