--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ HOST="0.0.0.0"
 PORT=5000
 TIMEZONE="Europe/Paris"
 
+# Flask Session Security (IMPORTANT!)
+# Générer avec: python -c "import secrets; print(secrets.token_hex(32))"
+SECRET_KEY="changez_moi_par_une_clé_secrète_très_longue_et_aléatoire"
+
 # Monitoring
 monitoring_enabled=false
 db_name=name
