Add production deployment guide and Docker publishing script
- Created a comprehensive guide for deploying the CinéBrest application in production, including prerequisites, initial configuration, Docker deployment, security measures, HTTPS configuration with Nginx, monitoring, application updates, database backup procedures, troubleshooting tips, performance optimizations, and a deployment checklist.
- Added a PowerShell script for publishing Docker images to Docker Hub, including verification steps for Docker installation and user connection, image construction, local testing, and publishing processes.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ TIMEZONE="Europe/Paris"
 # Générer avec: python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY="changez_moi_par_une_clé_secrète_très_longue_et_aléatoire"
 
+# Production Mode (sécurité)
+# En production, mettre FORCE_HTTPS=true pour activer les headers de sécurité
+FORCE_HTTPS=false
+DEBUG=false
+
 # Monitoring
 monitoring_enabled=false
 db_name=name
